@@ -1,3 +1,8 @@
+2007-02-02  Bob Wilson  <bob.wilson@acm.org>
+
+	* config/xtensa-relax.c (build_transition): Remove code after as_fatal.
+	(build_transition_table): Likewise.
+
 2007-02-01  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/tc-xtensa.c (xg_add_opcode_fix, md_apply_fix): Delete use of
